# topos

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
bins/topos/: CLAUDE.md  Cargo.toml  build.rs
bins/topos-plane/: CLAUDE.md  Cargo.toml
bins/topos-plane/src/: acme_serve.rs  enroll.rs  lib.rs  lifecycle_cmd.rs  main.rs  maintenance.rs  openapi.rs  rate_limit.rs  restore_cmd.rs  roster_cmd.rs  router.rs  session_read_cmd.rs  session_review_cmd.rs  standup_cmd.rs  state.rs  tests.rs  wire.rs
bins/topos/src/: actions.rs  app.rs  atomic.rs  cli.rs  cli_ref.rs  config_io.rs  ctx.rs  device_signer.rs  diff.rs  doc.rs  durability_tests.rs  enroll.rs  error.rs  follow_tests.rs  fs_seam.rs  git_source.rs  id.rs  identity.rs  ids.rs  lib.rs  logfile.rs  main.rs  materialize.rs  op_wal.rs  placement.rs  plane.rs  plane_http.rs  release.rs  render.rs  resolve.rs  scan.rs  sessions.rs  sidecar.rs  source.rs  stat_cache.rs  sync_status.rs  sync_tests.rs  test_support.rs  verb_tests.rs
bins/topos/tests/: cli.rs  piped_follow.rs  piped_login.rs
crates/plane-store/: CLAUDE.md  Cargo.toml  DESIGN.md
crates/plane-store/.sqlx/: query-001ab06f22e7237f74a021d363403fa2c9804fbaad3add402f33c566e2952421.json  query-019907eca3644335cdbfb7be5e055663ec5d9bc6e43ed246dc25eacfd02697d2.json  query-01a2f2c885466808ee0218f6f97d43b995161af191110ddc23aba3925e559136.json  query-0284d97e065e0d1b7cd3855bd2923a1b9036ba307024fb6bd6c12c6855db40c1.json  query-02bda0fde5e880713ba4238d61f73b4a95125255b58a9ab469e9216069690537.json  query-034aabdda7b8a256ff96f74ed7ca752939ce59b16d6c9237b894c86d251d8e25.json  query-042ffaee36f44af7695ef7cc2178099cedbf2545c6b50484457bdff54b080faa.json  query-044996f080f6345b52a1538505e7ba440b390b77a6099dbd12fa461454c6426d.json  query-04759218af85610b64c53081da6af4f3d224455e0523311cc5b86eeed76efc01.json  query-04905216ac023c47236d3d12c7eb99654a86f9b3034c0c1b6852ab5da1ecb6a1.json  query-065e8a4cdb75a2c0a7c79ad7c6116f80f44c9ee4eebc80a2ee123e6ca10c9bd3.json  query-06754f8b9047670b25823745709e7e84872e8e3cc5139ba3d7009797621346b4.json  query-06f1b1c354faa0c1346897820d4111df8789ad12b27e9d9ed4af33e74efd97f0.json  query-076250209d74b264ca6a2f7fe938ee741a359b9a11298eb81e946149d5d8abbc.json  query-0771595894b6de0431bc2988d1ec507e5dc6c1652b84756627d4e6befb156ce2.json  query-07c574a8133f34a906dde52566b11b00ef15d110f11d1ff6854e6d6eca4c4588.json  query-093e4c3a627c27a501d7fee0c8cbd75096eb2795c94252e5b5da8949ec5e2a8e.json  query-094397dffa9f3e205bcffb6f706b649f26d9bc0abc69cb0ce9090582615c9e34.json  query-09b798948437ce689d9def3a1e6daa6612718c338a3760e5f6f2134160ebdce5.json  query-0a4a475a207246a6fa8b7b519bf3ba1c4af106ac21abfc7fad23dfcbe559abaa.json  query-0ae3324264b6b40b47c2a7dd28464a4c09d7189b133be55f5d54b4ae69f57d66.json  query-0b4f4690fe49e31250705d22bd53ad7d0a4e79d0c17ee61a153dcef0c4d0ed46.json  query-0b658634fc90d984396927934556938e6edad367e1740b8cc71ff8c5638a9372.json  query-0b8978e8d7cfb2d92d4bf00bf6e9a51f04ae81912a3a6b02c91611366cab29d4.json  query-0b9435121d4f99caf98697538c367fad78d6e82113a48be09d8cc2e998788066.json  query-0bcb7c52a71dbdffa63246723d7c52cdb35faf2c1bc830635fe9ea89afe0bc3c.json  query-0bd165f7d6bf78c12ba1bfa12315773c561be80cefad65e09125d49da9cad8ad.json  query-0c1857e72f6a5af40f7f4c94d0fbb0cddb281cb69bdba01f253b48ac412aaa51.json  query-0ce219d406e7beb6a3795c2bb3c91d8328b72ece54e8e21f782a1b070fe7c19c.json  query-0cf6f35d15dd3af85b9996769ec32299a1ad343de56758d0b533d031e3394fa6.json  query-0de8925e54969165c4c05170243d5085b2085c4de95236670a3e05b8233f49b5.json  query-0e037ef56305f752d1655872230f81af5791563c613a07a5e54e2272ee98a2d3.json  query-0ed562f012121e745011b538d7f7404f9fcb2d1d71aba0460ee2d181194f6785.json  query-0fc918513d4069d38f66fc1b1aa91b46b0eadcae3a4cbccdbb6d6524a7f3e91d.json  query-11bcc0c3f41710d344e3e3a0c161346f47da0c4c2a3a4a0c07c45f78ce5786f7.json  query-1203ee478e9ad93bec6f04a507546f641577464d3516eb73487010ca9a98905f.json  query-12327608c395b576cafe38c5b6164a05db6ab9612ae7370eb8a2f9b5faf49efb.json  query-124bd6f0285be7d5c29b1bc975a958cd5d07ca492668436a12c6ce312ebf741e.json  query-124e8457068aacf79da3b232a35a9c7cee667b5d92f708840d708addd6fcf7fd.json  query-12beb3d1f3c6a09635bfd16e6c98220d3351ceecf31b8035701179413e2e9ef4.json  (+412 more)
crates/plane-store/migrations/: 0001_custody.sql  0001_init.sql  0002_object_lifecycle.sql  0003_set_current.sql  0004_proposals.sql  0005_read_token.sql  0006_enrollment.sql  0007_object_presence_git_oid.sql  0008_standup.sql  0009_session_roster.sql  0010_canonical_principal.sql  0011_skill_display_name.sql  0012_web_review.sql  0013_decrypto.sql  0014_workspace_credential.sql  0015_channels.sql  0016_verb_surface.sql  0017_review_default_setter.sql  0018_web_admin.sql  0019_device_door.sql  0020_bundle_kind.sql  0021_follow_device_ownership.sql  0022_channel_place_create_race.sql
crates/plane-store/src/: actor.rs  authority.rs  enroll.rs  error.rs  fixtures.rs  gc.rs  governance.rs  id.rs  lib.rs  lifecycle.rs  lineage.rs  read.rs  restore.rs  secret.rs  session_read.rs  session_review.rs  session_roster.rs  set_current.rs  signer.rs  tests.rs  upload.rs
crates/topos-core/: CLAUDE.md  Cargo.toml
crates/topos-core/src/: consent.rs  digest.rs  identity.rs  lib.rs  merge.rs  sign.rs  sync.rs  testgen.rs
crates/topos-gitstore/: CLAUDE.md  Cargo.toml
crates/topos-gitstore/src/: diff.rs  error.rs  fence.rs  lib.rs  (+5 more)
crates/topos-harness/: CLAUDE.md  Cargo.toml
crates/topos-types/: CLAUDE.md  Cargo.toml
tests/: CLAUDE.md  Cargo.toml
tests/src/: lib.rs
tests/tests/: catalog_e2e.rs  channels_e2e.rs  claim_e2e.rs  contribute_e2e.rs  cross_workspace_e2e.rs  device_links_e2e.rs  follow_e2e.rs  hero.rs  hero_claude.rs  invite_redemption_e2e.rs  multi_workspace_e2e.rs  restore_e2e.rs  revocation_e2e.rs  session_manifest_e2e.rs  standup_e2e.rs  uniform_e2e.rs  verb_reshape_e2e.rs  yes_scope_e2e.rs
xtask/: CLAUDE.md  Cargo.toml
xtask/src/: dist.rs  main.rs  registry_drift.rs
(+769 files in other folders)
