# topos — one public Apache-2.0 Cargo workspace.
# 5 lib crates + 2 app crates (lib+bin) + xtask. Every split is paid for by a
# testable-authority boundary, a platform-dep boundary, or the plane-store privacy
# boundary — never a crate-per-noun.
[workspace]
resolver = "3"
members = [
    "crates/topos-types",
    "crates/topos-core",
    "crates/topos-gitstore",
    "crates/topos-harness",
    "crates/plane-store",
    "bins/topos",
    "bins/topos-plane",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/topos-sh/topos" # org topos-sh claimed; repo created at the split
publish = false

# The curated pin set. A member only compiles a dep it references with `.workspace = true`;
# entries listed here but unused are not resolved, so the heavy trees (gix/sqlx/axum) stay
# out of the first build until their crate lands.
[workspace.dependencies]
# --- internal crates (the acyclic graph) ---
topos-types = { path = "crates/topos-types" }
topos-core = { path = "crates/topos-core" }
topos-gitstore = { path = "crates/topos-gitstore" }
topos-harness = { path = "crates/topos-harness" }
plane-store = { path = "crates/plane-store" }

# --- the wire leaf (topos-types) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"                                     # JSON-Schema 2020-12 (the v0 contract artifact)
uuid = { version = "1", features = ["v4", "serde"] } # client-minted op_id v4

# --- errors (libs use thiserror; bins use anyhow) ---
thiserror = "2"
anyhow = "1"

# --- declared for later (NOT yet referenced by any member) ---
# default-features = false keeps the kernel's sha2 no_std (the default `std` feature would otherwise
# pull std into topos-core's tree); held at 0.10 to share one sha2 with ed25519-dalek.
sha2 = { version = "0.10", default-features = false }  # topos-core: byte-exact digest + commit/device-op preimage
unicode-normalization = { version = "0.1", default-features = false } # topos-core: NFC path-collision reject (no_std)
# default-features = false keeps topos-core's verify path no_std (no RNG/std); the signing consumers
# (plane-store / client) opt back into `std` + `rand_core` for the in-process / device signer.
ed25519-dalek = { version = "2", default-features = false }  # topos-core verify + caller sign (ONE shared impl)
gix = { version = "0.85", default-features = false } # topos-gitstore: dumb object mechanics (plumbing-only; members add the lean features they need)
sqlx = { version = "0.8.6", default-features = false } # plane-store: raw, no ORM (held at 0.8.6 for the offline-metadata drift gate)
axum = "0.8"                  # topos-plane HTTP
utoipa = "5"                  # OpenAPI generation for the Rust plane (wired in xtask)
clap = { version = "4", features = ["derive"] }       # topos client bin
ureq = "3"                    # topos client transport — default, blocking, rustls+ring
rustix = { version = "1", features = ["fs"] } # topos client: safe fsync / F_FULLFSYNC / flock (no unsafe)
tracing = "0.1"              # observability spine
tracing-subscriber = { version = "0.3", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"        # no unsafe in our crates (deps may use it internally)
unreachable_pub = "warn"      # a pub item not reachable outside its crate is almost always a missing pub(crate)
missing_debug_implementations = "warn" # public types should be inspectable

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Selected restriction lints that suit a trust kernel; widened per-crate (topos-core) where it earns it.
dbg_macro = "warn"
todo = "warn"

# Release profile for the prebuilt, statically-distributed client + the plane binary.
# `panic` is deliberately NOT set workspace-wide: the CLI could abort, but the plane server
# wants unwinding so one request's panic can't take the whole process down — set it per-bin if ever.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
