# topos — one public Apache-2.0 Cargo workspace.
# 5 lib crates + 2 app crates (lib+bin) + xtask. Every split is paid for by a
# testable-authority boundary, a platform-dep boundary, or the plane-store privacy
# boundary — never a crate-per-noun.
[workspace]
resolver = "3"
members = [
    "crates/topos-types",
    "crates/topos-core",
    "crates/topos-gitstore",
    "crates/topos-harness",
    "crates/plane-store",
    "bins/topos",
    "bins/topos-plane",
    "xtask",
    "tests",
]

[workspace.package]
version = "0.1.0" # first public release; members inherit via `version.workspace = true`
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/topos-sh/topos" # org topos-sh claimed; repo created at the split
publish = false

# The curated pin set. A member only compiles a dep it references with `.workspace = true`;
# entries listed here but unused are not resolved, so the heavy trees (gix/sqlx/axum) stay
# out of the first build until their crate lands.
[workspace.dependencies]
# --- internal crates (the acyclic graph) ---
topos-types = { path = "crates/topos-types" }
topos-core = { path = "crates/topos-core" }
topos-gitstore = { path = "crates/topos-gitstore" }
topos-harness = { path = "crates/topos-harness" }
plane-store = { path = "crates/plane-store" }
topos-plane = { path = "bins/topos-plane" } # the OSS plane lib — referenced by xtask (OpenAPI generation)
topos = { path = "bins/topos" } # the client lib — referenced by the tests/ member (its test-fixtures HERO surface)

# --- the wire leaf (topos-types) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"                                     # JSON-Schema 2020-12 (the v0 contract artifact)
uuid = { version = "1", features = ["v4", "serde"] } # client-minted op_id v4

# --- errors (libs use thiserror; bins use anyhow) ---
thiserror = "2"
anyhow = "1"

# --- declared for later (NOT yet referenced by any member) ---
# default-features = false keeps the kernel's sha2 no_std (the default `std` feature would otherwise
# pull std into topos-core's tree); held at 0.10 to share one sha2 with ed25519-dalek.
sha2 = { version = "0.10", default-features = false }  # topos-core: byte-exact digest + the content-addressed identity derivations; plane-store: the HMAC-SHA256 backend
hmac = "0.12"                 # plane-store only: the deterministic opaque-credential derivation (HMAC-SHA256 over the 0600 enrollment secret) — never reaches the client
unicode-normalization = { version = "0.1", default-features = false } # topos-core: NFC path-collision reject (no_std)
# The client's device-key generation is the ONLY consumer (the device key is a presented identity —
# nothing signs or verifies with it; the server stores the public key + serves its fingerprint).
ed25519-dalek = { version = "2", default-features = false }  # bins/topos: device keypair generation (std + zeroize features added there)
base64 = "0.22"               # opaque-credential codec (base64url-unpadded): plane-store mints, the client stores/presents
zeroize = "1"                 # plane-store: wrap the 0600 enrollment-secret seed; bins/topos: wipe the device-key seed buffer
getrandom = "0.2"             # plane-store: fresh device/user codes + retry jitter; bins/topos: first-run device-key seed
gix = { version = "0.85", default-features = false } # topos-gitstore: dumb object mechanics (plumbing-only; members add the lean features they need)
imara-diff = "0.1"            # topos-gitstore: the diff ENGINE behind the unified-diff renderer (pure-Rust histogram/Myers); we own the unified-diff FORMATTING so the `diff` golden stays byte-stable across its releases
# topos-gitstore: the per-file three-way (diff3) content merge ENGINE. PINNED EXACT — its conflict-marker
# bytes are a consent-path artifact (re-digested + human-approved), so an upgrade must be a deliberate,
# golden-vector-reviewed change, never a silent semver bump. `default-features = false` keeps the optional
# `binary` (zlib-rs) + `color` (anstyle) deps out — the merge needs neither.
diffy = { version = "=0.5.0", default-features = false, features = ["std"] }
sqlx = { version = "0.8.6", default-features = false } # plane-store: raw, no ORM (held at 0.8.6 for the offline-metadata drift gate)
# The async runtime is the SERVER's (sqlx is async-native): it reaches plane-store's library via sqlx's
# `runtime-tokio` feature, and is a dev-dependency there to drive `#[tokio::test]`. The client never gets
# this edge — check-arch forbids `topos -> plane-store` — so the CLI stays sync and tokio-free.
tokio = { version = "1", default-features = false }
axum = "0.8"                  # topos-plane HTTP
utoipa = "5"                  # OpenAPI generation for the Rust plane (wired in xtask)
clap = { version = "4", features = ["derive"] }       # topos client bin
ureq = "3"                    # topos client transport — default, blocking, rustls+ring
rustix = { version = "1", features = ["fs"] } # topos client: safe fsync / F_FULLFSYNC / flock (no unsafe)
hex = "0.4"                   # one shared hex codec for the std crates (the client decodes 64-char sidecar id fields); the no_std kernel keeps its own tiny impl
tracing = "0.1"              # observability spine
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] } # topos-plane bin: JSON logs + RUST_LOG filter
# Enrollment edge (topos-plane ONLY; the client takes no edge to it — check-arch forbids topos -> plane-store
# and topos never depends on topos-plane). The OIDC connector is feature-gated DEFAULT-OFF, so a default
# build pulls in neither oauth2 nor openidconnect (nor their reqwest/tokio stack). Passcode MAIL left this
# workspace with the mail unification — the composing web app owns the transport; the plane only mints.
oauth2 = "5"                  # topos-plane enrollment OIDC (feature-gated, default-off; reqwest + rustls by default)
openidconnect = "4"           # topos-plane enrollment OIDC (feature-gated, default-off; wraps oauth2; reqwest + rustls)
# The built-in ACME TLS serve path (topos-plane ONLY, behind the default-off `acme` feature — bin-side
# composition code, never the lib surface). ring-only: `default-features = false` drops rustls-acme's
# default aws-lc-rs provider so the plane keeps ONE crypto backend; its `axum` feature carries the
# axum-server acceptor glue that answers tls-alpn-01 inside the TLS accept.
rustls-acme = { version = "0.15.3", default-features = false, features = ["ring", "tls12", "webpki-roots", "axum"] }
axum-server = "0.8"           # topos-plane acme: the TLS listener rustls-acme's AxumAcceptor plugs into
webpki-roots = "1"            # topos-plane acme: the WebPKI roots the ACME client's trust store starts from
rustls-pki-types = { version = "1", features = ["std"] } # topos-plane acme: parse the --acme-extra-root PEM (`pem_file_iter` is std-gated)
futures-util = { version = "0.3", default-features = false } # topos-plane acme: drain the ACME event stream into tracing

[workspace.lints.rust]
unsafe_code = "forbid"        # no unsafe in our crates (deps may use it internally)
unreachable_pub = "warn"      # a pub item not reachable outside its crate is almost always a missing pub(crate)
missing_debug_implementations = "warn" # public types should be inspectable

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Selected restriction lints that suit a trust kernel; widened per-crate (topos-core) where it earns it.
dbg_macro = "warn"
todo = "warn"

# Release profile for the prebuilt, statically-distributed client + the plane binary.
# `panic` is deliberately NOT set workspace-wide: the CLI could abort, but the plane server
# wants unwinding so one request's panic can't take the whole process down — set it per-bin if ever.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
