[package]
name = "topos-e2e"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workspace-level end-to-end integration tests — the HERO loopback (the real client pull engine over loopback HTTP against the real plane). No production code; the lib is an empty anchor so the integration tests in tests/ are a workspace member that `cargo test --workspace` runs."

# The HERO drives BOTH sides through their feature-gated test-fixtures surfaces: the client's `test_support`
# (set up `~/.topos/` + run the real pull engine over the real `ureq` transport) and plane-store's seed
# shims (stage an authority + move/tamper `current`). `topos`'s `test-fixtures` adds NO server edge to the
# client (check-arch asserts it). These are dev-deps of a test-only crate, so the feature never reaches a
# production artifact (the production build is `cargo build -p topos-plane`, which excludes this member).
[dev-dependencies]
topos = { workspace = true, features = ["test-fixtures"] }
plane-store = { workspace = true, features = ["test-fixtures"] }
topos-plane.workspace = true
topos-types.workspace = true
# A multi-threaded runtime so the plane's async handlers make progress while the SYNC client (blocking
# `ureq`) runs on a plain thread; `net` for the loopback listener.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
# Serve the composed `router(state)` over a real loopback socket (with peer ConnectInfo).
axum.workspace = true
# Derive the device public key from the deterministic signing seed for `seed_device`.
ed25519-dalek = { workspace = true, features = ["std"] }
# Compare the client's `sync.json` base_commit (hex) to the plane's genesis version id.
hex.workspace = true

[lints]
workspace = true
