[package]
name = "topos-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workspace-level end-to-end integration tests — the loopback-HTTP e2e suites (the distribute HERO, the real-Claude-Code-adapter HERO, the real `follow` enrollment, the contribute write verbs) driving the genuine client engine against the real plane. No production code; the lib is an empty anchor so the integration tests in tests/ are a workspace member that `cargo test --workspace` runs."

# The HERO drives BOTH sides through their feature-gated test-fixtures surfaces: the client's `test_support`
# (set up `~/.topos/` + run the real pull engine over the real `ureq` transport) and plane-store's seed
# shims (stage an authority + move `current`). `topos`'s `test-fixtures` adds NO server edge to the
# client (check-arch asserts it). These are dev-deps of a test-only crate, so the feature never reaches a
# production artifact (the production build is `cargo build -p topos-plane`, which excludes this member).
[dev-dependencies]
topos = { workspace = true, features = ["test-fixtures"] }
plane-store = { workspace = true, features = ["test-fixtures"] }
# Provision a fresh, migrated per-test Postgres database for each loopback e2e (these harnesses run a
# blocking `ureq` client alongside a live axum server on a self-owned multi-thread runtime, so they cannot
# use `#[sqlx::test]`'s current-thread runtime without deadlocking — see `tests/common/mod.rs`). A dev-dep
# of this test-only crate, so it never reaches a production artifact.
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate"] }
topos-plane.workspace = true
topos-types.workspace = true
# A multi-threaded runtime so the plane's async handlers make progress while the SYNC client (blocking
# `ureq`) runs on a plain thread; `net` for the loopback listener.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
# Serve the composed `router(state)` over a real loopback socket (with peer ConnectInfo).
axum.workspace = true
# Parse the follower's real settings.json to assert the EXACT installed SessionStart hook command.
serde_json.workspace = true
# Compare the client's `sync.json` base_commit (hex) to the plane's genesis version id.
hex.workspace = true

[lints]
workspace = true
