[package]
name = "topos-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workspace-level end-to-end integration tests — the composed-stack e2e suites (the distribute HERO, the real `follow` enrollment, the contribute loop, delivery/channels, revocation, the claim door) driving the genuine client engine against the real web app in front of the in-process vault. No production code; the lib is an empty anchor so the integration tests in tests/ are a workspace member that `cargo test --workspace` runs."

# The suites drive the CLIENT through its feature-gated test-fixtures surface (set up `~/.topos/` +
# run the real verbs over the real `ureq` transports). `topos`'s `test-fixtures` adds NO server edge
# to the client (check-arch asserts it). These are dev-deps of a test-only crate, so the feature
# never reaches a production artifact.
[dev-dependencies]
topos = { workspace = true, features = ["test-fixtures"] }
# The in-process vault: the custody authority + its sqlx migrations, served via `topos_plane::router`.
# `test-fixtures` exposes the pool-injection constructor + the MIGRATOR (compiled out of production).
plane-store = { workspace = true, features = ["test-fixtures"] }
topos-plane.workspace = true
topos-types.workspace = true
# Provision the per-test Postgres by the production recipe (roles/schemas/grants + both lineages).
# These harnesses run a blocking `ureq` client alongside a live axum server on a self-owned
# multi-thread runtime, so they cannot use `#[sqlx::test]`'s current-thread runtime without
# deadlocking — see `tests/common/mod.rs`. A dev-dep of a test-only crate.
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate"] }
# A multi-threaded runtime so the vault's async handlers make progress while the SYNC client
# (blocking `ureq`) runs on a plain thread; `net` for the loopback listener.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
# Serve the composed `router(state)` over a real loopback socket (with peer ConnectInfo).
axum.workspace = true
# The harness's own HTTP bodies (the browser-session forms + the device-lane probes).
serde_json.workspace = true
# The blocking harness transport (the same crate the client itself runs; test-only here).
ureq.workspace = true

[lints]
workspace = true
