[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The ONE codegen + conformance entrypoint (a cargo-xtask bin, not a prod dep). v0: `cargo xtask gen-schema` → JSON-Schema (from topos-types) + the plane OpenAPI; `gen-schema --check` = the CI drift gate. No `model` subcommand — formal verification is out of v0."

[dependencies]
topos-types.workspace = true
topos-plane.workspace = true # the OSS plane lib — for `topos_plane::openapi()` (the OpenAPI drift gate)
schemars.workspace = true
utoipa.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[lints]
workspace = true
