[package]
name = "topos-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The OSS vault, library-first (lib + thin bin). PURE BYTE CUSTODY: the lib composes plane-store's Authority behind the bearer-gated /internal/v1 custody lane (one caller — the product app — every request pre-authorized) plus /healthz; the bin is a thin axum main. The committed OpenAPI describes the PUBLIC device lane the app serves (contract stubs), never this internal lane."

[dependencies]
topos-core.workspace = true
# `contract-derives` turns on the `utoipa::ToSchema` impls this crate's OpenAPI assembly references at
# compile time (and the schemars twins) — the vault is one of the two contract producers (with xtask);
# the feature stays off everywhere else, so the client's DTOs stay pure serde.
topos-types = { workspace = true, features = ["contract-derives"] }
plane-store.workspace = true
thiserror.workspace = true
# The HTTP surface: axum (default features cover json/http1/tokio/query; matchit is built-in), the OpenAPI
# generator, the async runtime, the observability spine, the bin's arg parser, and the edge codec.
axum.workspace = true
utoipa.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "time"] } # `time`: the maintenance scheduler's interval
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["env"] } # `derive` from the workspace base; `env` for arg env-fallback
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true # candidate file bytes ride base64 in JSON

[dev-dependencies]
# The per-route tests drive `router(state)` via `oneshot` (no socket) over a real authority.
# `plane-store/test-fixtures` is dev-ONLY here, so the production `cargo build -p topos-plane` never
# enables it (the CI guard asserts this).
plane-store = { workspace = true, features = ["test-fixtures"] }
# The route tests inject a per-test Postgres via `#[sqlx::test]` into `Authority::from_pool`. Dev-only,
# so the production vault build never carries a driver it doesn't use.
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
