[package]
name = "topos"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The CLIENT app (lib + thin bin): the 12-verb domain ops, the pull state machine, the sidecar, namespace-atomic materialization, the device-flow client + device-key signer. A thin sync tool, never an authority — depends on NO SQL and NO plane-store (architectural layering, asserted by a cargo-tree check)."

# The architectural-layering rule: this binary's graph
# carries NO plane-store, NO sqlx, NO libsqlite3-sys. Enforced by a `cargo tree -p topos` CI check
# (see xtask), NOT a global cargo-deny ban (those crates live elsewhere in the workspace).
# The plane transport (ureq) + device-key signer (ed25519-dalek) + harness adapters land later.
[dependencies]
topos-core.workspace = true
topos-types.workspace = true
topos-gitstore.workspace = true
topos-harness.workspace = true
clap = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rustix.workspace = true
hex.workspace = true
# DECODE-ONLY: the signed `current` pointer's base64url-unpadded Signature.value (86 chars), verified
# against the pinned plane key. This is the public verify-side codec, NOT the private-key signing edge
# (no key, no RNG) — so it does not cross the architectural line check-arch enforces (no plane-store/sqlx).
base64.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# TEST-ONLY: sign fixture `current` pointers with a throwaway plane key so the verify path is exercised
# end-to-end. A dev-dependency never enters the production graph, so it does not cross check-arch's line
# (the client production build stays verify-only via topos-core). Pinned through the workspace set,
# adding only `std` for signing (no key-gen / zeroize needed here).
ed25519-dalek = { workspace = true, features = ["std"] }

[lints]
workspace = true
